** 1.2.0 released on 2008-03-29

2008-03-08  Maciek Konecki  <maciusk1@wp.pl>  and  Piotr Fusik  <fox@scene.pl>
* acpu.c, apokeysnd.c, asap.c, asap_internal.h, csharp/ASAP.ppcs,
  csharp/asap2wav.cs, csharp/Makefile, java/ASAP.ppjava, win32/Makefile:
  ASAP can be compiled as C#


2008-03-03  Piotr Fusik  <fox@scene.pl>
* asap.c: improved RMT loop detection

* README, win32/apollo/ASAP_Apollo.cpp, win32/apollo/InputPlugin.h,
  win32/apollo/README, win32/gui.c, win32/gui.h, win32/gui.rc, win32/Makefile:
  Apollo plugin


2008-03-01  Piotr Fusik  <fox@scene.pl>
* asap.c: corrected RMT duration determining routine ("jump in pattern" wasn't
  handled correctly) and extended it with detection of trailing silence

* asap.c, asap_internal.h, acpu.c, apokeysnd.c, java/ASAP.ppjava:
  changed C/Java abstraction macros so they can be used for C#

* asapscan.c: wasn't compilable


2008-02-28  Piotr Fusik  <fox@scene.pl>
* win32/dshow/asap_dsf.cpp: fixed seeking, restarting and a memory leak


2008-02-27  Piotr Fusik  <fox@scene.pl>
* win32/dshow/asap_dsf.cpp: implemented IMediaSeeking


2008-02-24  Piotr Fusik  <fox@scene.pl>
* win32/dshow/asap_dsf.cpp, win32/dshow/asap_dsf.def, win32/dshow/README,
  win32/gui.rc, win32/Makefile, README: created DirectShow source filter
  (usable in Windows Media Player)


2008-02-19  Piotr Fusik  <fox@scene.pl>
* asap.c: fixed conversion of TMC (playing twice per frame) to SAP


** 1.1.0 released on 2008-02-17

2008-02-17  Piotr Fusik  <fox@scene.pl>
* win32/gui.c: can edit file information before converting to SAP


2008-02-16  Piotr Fusik  <fox@scene.pl>
* asap.c, asap.h, java/ASAP.ppjava, java/ASAP_ModuleInfo.java, win32/gui.c,
  win32/gui.h, win32/gui.rc, win32/Makefile: conversion to and from SAP

* asap2wav.c: use ASAP_ChangeExt()


2008-02-10  Piotr Fusik  <fox@scene.pl>
* xmms/libasap.c: corrected two bugs reported by Hennie:
  1. xmms did not advance to the next track after a SAP file has been played;