@@ -1,3 +1,7 @@
+2008-04-06  Piotr Fusik  <fox@scene.pl>
+* xbmc/xbmc_asap.c, win32/Makefile, win32/gui.rc: XBMC plugin
+
+
 ** 1.2.0 released on 2008-03-29
 
 2008-03-08  Maciek Konecki  <maciusk1@wp.pl>  and  Piotr Fusik  <fox@scene.pl>
